// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataCollectionCitation renders  component with a mock espace record 1`] = `
<div>
  <div
    class="citationContent citationDataCollection"
  >
    <span
      class="citationAuthors"
    >
      
      <span
        class="citationAuthor"
        data-testid="rek-author-0"
      >
        
        Parks, Donovan H.
        
      </span>
      , 
      
      <span
        class="citationAuthor"
        data-testid="rek-author-1"
      >
        
        Imelfort, Michael
        
      </span>
      , 
      
      <span
        class="citationAuthor"
        data-testid="rek-author-2"
      >
        
        Skennerton, Connor T.
        
      </span>
      , 
      
      <span
        class="citationAuthor"
        data-testid="rek-author-3"
      >
        
        Hugenholtz, Philip
        
      </span>
      , 
       and 
      <span
        class="citationAuthor"
        data-testid="rek-author-4"
      >
        
        Tyson, Gene W.
        
      </span>
      
      
    </span>
    <span
      class="citationDate"
    >
      (
      2015
      ).
    </span>
    <span
      class="citationTitle"
    >
       
      Data collection mock testing record
      .
    </span>
    <span
      class="citationPublisher"
    >
       
      Cold Spring Harbor Laboratory Press
      .
    </span>
    <span
      class="citationCollectionType"
    >
       
      Data Collection
      .
    </span>
    <span
      data-testid="rek-doi"
    >
      <a
        aria-label="Open this DOI in an new window"
        class="citationDoiLink css-1oqhn84"
        data-analyticsid="citation-doi-link"
        data-testid="citation-doi-link"
        href="https://doi.org/10.14264/uql.2016.841"
        id="citation-doi-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="Open this DOI in an new window"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-7r41zx-MuiSvgIcon-root"
          data-testid="OpenInNewIcon"
          focusable="false"
          id="citation-doi-link-new-window-icon"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
          />
        </svg>
        https://doi.org/10.14264/uql.2016.841
      </a>
    </span>
  </div>
</div>
`;

exports[`DataCollectionCitation renders  component with a mock espace record with a missing date 1`] = `
<div>
  <div
    class="citationContent citationDataCollection"
  >
    <span
      class="citationAuthors"
    >
      
      <span
        class="citationAuthor"
        data-testid="rek-author-0"
      >
        
        Parks, Donovan H.
        
      </span>
      , 
      
      <span
        class="citationAuthor"
        data-testid="rek-author-1"
      >
        
        Imelfort, Michael
        
      </span>
      , 
      
      <span
        class="citationAuthor"
        data-testid="rek-author-2"
      >
        
        Skennerton, Connor T.
        
      </span>
      , 
      
      <span
        class="citationAuthor"
        data-testid="rek-author-3"
      >
        
        Hugenholtz, Philip
        
      </span>
      , 
       and 
      <span
        class="citationAuthor"
        data-testid="rek-author-4"
      >
        
        Tyson, Gene W.
        
      </span>
      
      
    </span>
    <span
      class="citationDate empty"
    />
    <span
      class="citationTitle"
    >
       
      Data collection mock testing record
      .
    </span>
    <span
      class="citationPublisher"
    >
       
      Cold Spring Harbor Laboratory Press
      .
    </span>
    <span
      class="citationCollectionType"
    >
       
      Data Collection
      .
    </span>
    <span
      data-testid="rek-doi"
    >
      <a
        aria-label="Open this DOI in an new window"
        class="citationDoiLink css-1oqhn84"
        data-analyticsid="citation-doi-link"
        data-testid="citation-doi-link"
        href="https://doi.org/10.14264/uql.2016.841"
        id="citation-doi-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="Open this DOI in an new window"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-7r41zx-MuiSvgIcon-root"
          data-testid="OpenInNewIcon"
          focusable="false"
          id="citation-doi-link-new-window-icon"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
          />
        </svg>
        https://doi.org/10.14264/uql.2016.841
      </a>
    </span>
  </div>
</div>
`;

exports[`DataCollectionCitation renders  component with a mock espace record with a missing title 1`] = `
<div>
  <div
    class="citationContent citationDataCollection"
  >
    <span
      class="citationAuthors"
    >
      
      <span
        class="citationAuthor"
        data-testid="rek-author-0"
      >
        
        Parks, Donovan H.
        
      </span>
      , 
      
      <span
        class="citationAuthor"
        data-testid="rek-author-1"
      >
        
        Imelfort, Michael
        
      </span>
      , 
      
      <span
        class="citationAuthor"
        data-testid="rek-author-2"
      >
        
        Skennerton, Connor T.
        
      </span>
      , 
      
      <span
        class="citationAuthor"
        data-testid="rek-author-3"
      >
        
        Hugenholtz, Philip
        
      </span>
      , 
       and 
      <span
        class="citationAuthor"
        data-testid="rek-author-4"
      >
        
        Tyson, Gene W.
        
      </span>
      
      
    </span>
    <span
      class="citationDate"
    >
      (
      2015
      ).
    </span>
    <span
      class="citationTitle empty"
    />
    <span
      class="citationPublisher"
    >
       
      Cold Spring Harbor Laboratory Press
      .
    </span>
    <span
      class="citationCollectionType"
    >
       
      Data Collection
      .
    </span>
    <span
      data-testid="rek-doi"
    >
      <a
        aria-label="Open this DOI in an new window"
        class="citationDoiLink css-1oqhn84"
        data-analyticsid="citation-doi-link"
        data-testid="citation-doi-link"
        href="https://doi.org/10.14264/uql.2016.841"
        id="citation-doi-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="Open this DOI in an new window"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-7r41zx-MuiSvgIcon-root"
          data-testid="OpenInNewIcon"
          focusable="false"
          id="citation-doi-link-new-window-icon"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
          />
        </svg>
        https://doi.org/10.14264/uql.2016.841
      </a>
    </span>
  </div>
</div>
`;

exports[`DataCollectionCitation renders  component with a mock espace record with missing authors 1`] = `
<div>
  <div
    class="citationContent citationDataCollection"
  >
    <span
      class="citationAuthors empty"
    />
    <span
      class="citationDate"
    >
      (
      2015
      ).
    </span>
    <span
      class="citationTitle"
    >
       
      Data collection mock testing record
      .
    </span>
    <span
      class="citationPublisher"
    >
       
      Cold Spring Harbor Laboratory Press
      .
    </span>
    <span
      class="citationCollectionType"
    >
       
      Data Collection
      .
    </span>
    <span
      data-testid="rek-doi"
    >
      <a
        aria-label="Open this DOI in an new window"
        class="citationDoiLink css-1oqhn84"
        data-analyticsid="citation-doi-link"
        data-testid="citation-doi-link"
        href="https://doi.org/10.14264/uql.2016.841"
        id="citation-doi-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="Open this DOI in an new window"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-7r41zx-MuiSvgIcon-root"
          data-testid="OpenInNewIcon"
          focusable="false"
          id="citation-doi-link-new-window-icon"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
          />
        </svg>
        https://doi.org/10.14264/uql.2016.841
      </a>
    </span>
  </div>
</div>
`;

exports[`DataCollectionCitation renders  component with a mock espace record with missing document type 1`] = `
<div>
  <div
    class="citationContent citationDataCollection"
  >
    <span
      class="citationAuthors"
    >
      
      <span
        class="citationAuthor"
        data-testid="rek-author-0"
      >
        
        Parks, Donovan H.
        
      </span>
      , 
      
      <span
        class="citationAuthor"
        data-testid="rek-author-1"
      >
        
        Imelfort, Michael
        
      </span>
      , 
      
      <span
        class="citationAuthor"
        data-testid="rek-author-2"
      >
        
        Skennerton, Connor T.
        
      </span>
      , 
      
      <span
        class="citationAuthor"
        data-testid="rek-author-3"
      >
        
        Hugenholtz, Philip
        
      </span>
      , 
       and 
      <span
        class="citationAuthor"
        data-testid="rek-author-4"
      >
        
        Tyson, Gene W.
        
      </span>
      
      
    </span>
    <span
      class="citationDate"
    >
      (
      2015
      ).
    </span>
    <span
      class="citationTitle"
    >
       
      Data collection mock testing record
      .
    </span>
    <span
      class="citationPublisher"
    >
       
      Cold Spring Harbor Laboratory Press
      .
    </span>
    <span
      class="citationCollectionType empty"
    />
    <span
      data-testid="rek-doi"
    >
      <a
        aria-label="Open this DOI in an new window"
        class="citationDoiLink css-1oqhn84"
        data-analyticsid="citation-doi-link"
        data-testid="citation-doi-link"
        href="https://doi.org/10.14264/uql.2016.841"
        id="citation-doi-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="Open this DOI in an new window"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-7r41zx-MuiSvgIcon-root"
          data-testid="OpenInNewIcon"
          focusable="false"
          id="citation-doi-link-new-window-icon"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
          />
        </svg>
        https://doi.org/10.14264/uql.2016.841
      </a>
    </span>
  </div>
</div>
`;

exports[`DataCollectionCitation renders  component with a mock espace record with missing doi 1`] = `
<div>
  <div
    class="citationContent citationDataCollection"
  >
    <span
      class="citationAuthors"
    >
      
      <span
        class="citationAuthor"
        data-testid="rek-author-0"
      >
        
        Parks, Donovan H.
        
      </span>
      , 
      
      <span
        class="citationAuthor"
        data-testid="rek-author-1"
      >
        
        Imelfort, Michael
        
      </span>
      , 
      
      <span
        class="citationAuthor"
        data-testid="rek-author-2"
      >
        
        Skennerton, Connor T.
        
      </span>
      , 
      
      <span
        class="citationAuthor"
        data-testid="rek-author-3"
      >
        
        Hugenholtz, Philip
        
      </span>
      , 
       and 
      <span
        class="citationAuthor"
        data-testid="rek-author-4"
      >
        
        Tyson, Gene W.
        
      </span>
      
      
    </span>
    <span
      class="citationDate"
    >
      (
      2015
      ).
    </span>
    <span
      class="citationTitle"
    >
       
      Data collection mock testing record
      .
    </span>
    <span
      class="citationPublisher"
    >
       
      Cold Spring Harbor Laboratory Press
      .
    </span>
    <span
      class="citationCollectionType"
    >
       
      Data Collection
      .
    </span>
    <span
      class="citationDOI empty"
    />
  </div>
</div>
`;

exports[`DataCollectionCitation renders  component with a mock espace record with missing publisher 1`] = `
<div>
  <div
    class="citationContent citationDataCollection"
  >
    <span
      class="citationAuthors"
    >
      
      <span
        class="citationAuthor"
        data-testid="rek-author-0"
      >
        
        Parks, Donovan H.
        
      </span>
      , 
      
      <span
        class="citationAuthor"
        data-testid="rek-author-1"
      >
        
        Imelfort, Michael
        
      </span>
      , 
      
      <span
        class="citationAuthor"
        data-testid="rek-author-2"
      >
        
        Skennerton, Connor T.
        
      </span>
      , 
      
      <span
        class="citationAuthor"
        data-testid="rek-author-3"
      >
        
        Hugenholtz, Philip
        
      </span>
      , 
       and 
      <span
        class="citationAuthor"
        data-testid="rek-author-4"
      >
        
        Tyson, Gene W.
        
      </span>
      
      
    </span>
    <span
      class="citationDate"
    >
      (
      2015
      ).
    </span>
    <span
      class="citationTitle"
    >
       
      Data collection mock testing record
      .
    </span>
    <span
      class="citationPublisher empty"
    />
    <span
      class="citationCollectionType"
    >
       
      Data Collection
      .
    </span>
    <span
      data-testid="rek-doi"
    >
      <a
        aria-label="Open this DOI in an new window"
        class="citationDoiLink css-1oqhn84"
        data-analyticsid="citation-doi-link"
        data-testid="citation-doi-link"
        href="https://doi.org/10.14264/uql.2016.841"
        id="citation-doi-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="Open this DOI in an new window"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-7r41zx-MuiSvgIcon-root"
          data-testid="OpenInNewIcon"
          focusable="false"
          id="citation-doi-link-new-window-icon"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
          />
        </svg>
        https://doi.org/10.14264/uql.2016.841
      </a>
    </span>
  </div>
</div>
`;

exports[`DataCollectionCitation renders  component with empty publication 1`] = `
<div>
  <div
    class="citationContent citationDataCollection"
  >
    <span
      class="citationAuthors empty"
    />
    <span
      class="citationDate empty"
    />
    <span
      class="citationTitle empty"
    />
    <span
      class="citationPublisher empty"
    />
    <span
      class="citationCollectionType empty"
    />
    <span
      class="citationDOI empty"
    />
  </div>
</div>
`;
